tests/paczka1/small_fuzzy/49302352.err
Error in line 4: A566 S514 34,2
Error in line 12: Zwj A566 -3,9
